# escenas-stdb

./: .env.example  .gitignore  Caddyfile  README.md  compose.production.yaml  compose.yaml
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  feed.py  film_parser.py  main.py  schemas.py
backend/tests/: test_feed.py  test_film_parser.py
web/: Dockerfile  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: CatalogGrid.tsx  CreditsFooter.tsx  DesktopSceneGrid.tsx  FeedSearch.tsx  FilterChips.tsx  GrainOverlay.tsx  IntermissionError.tsx  MarqueeHeader.tsx  MobileSceneFeed.tsx  NowPlayingModal.tsx  ProjectionTicker.tsx  QuotedHighlightInput.tsx  ResultsReel.tsx  SceneCard.tsx  SearchConsole.tsx  SectionTitle.tsx  StatusTicket.tsx  Still.tsx  SubtitleCard.tsx  icons.tsx
web/lib/: api.ts  format.ts
